# SideSlate-host

./: AGENTS.md  Probe_Findings_Phase1-5.md  Roadmap.md  UI.md  index.html  package-lock.json  package.json
src/: main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  native_video.rs  protocol.rs
src-tauri/windows/: nsis-hooks.nsh
